-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 2
-
None
-
2fe214ca90cfda68126bf6e83e876a3a00635521,7d4051d3bbc341574ca7a9bdf31d5f14306c1367
The public header qaxselect.h includes ui_qaxselect.h. I don't know if other include problems exist. I noticed this one when testing if #include <ActiveQt> works. (Update: this part is now fixed)
The Qt CI system likely did not catch this as the install of Qt is not autotested at all. Tests are run against the build-dir. (See also QTBUG-27315)
Also, the fact that headers are in the 'ActiveQt' directory instead of a directory prefixed with 'Qt' should be considered a bug that can be fixed for Qt 5.0. The porting script from QtGui/QWidget to QtWidgets/QWidget can probably be extended to help there.
qtactiveqt also does not follow other Qt conventions, as it does not use the qt_module.prf, and it represents multiple libraries instead of one. It should really be two modules - AxContainer and AxServer.
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
- relates to
-
QTBUG-78167
Port qtactiveqt to CMake
-
- Closed
-
| For Gerrit Dashboard: QTBUG-27776 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 39654,2 | Provide missing documentation for QAxSelect | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |
| 40820,1 | adjust to modularization changes in ActiveQt | master | qt/qtbase | Status: MERGED | +2 | 0 |
| 40825,4 | fix activeqt module structure | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |
| 40990,1 | Don't create broken cmake config files. | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |
| 41217,2 | unmess library naming | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |
| 298918,13 | Restructure the libraries | dev | qt/qtactiveqt | Status: MERGED | +2 | 0 |