Remove dependency on a generated ui header file in a public header file

Since the public headers can be installed then it is not really a good
idea to have generated ui header files included in them.  Therefore this
changes how the ui code is utilized so it creates it as a member rather
than subclassing the class instead.

Task-number: QTBUG-27776 (partial)

Change-Id: I79a2a3f775202133bb6d7f2f30e0b6d86c9fa1fd