src/activeqt/container/qaxselect.h
@@ -43,10 +43,6 @@
 
 #include <QtWidgets/QDialog>
 
-#ifndef QT_NO_WIN_ACTIVEQT
-#include "ui_qaxselect.h"
-#endif
-
 QT_BEGIN_HEADER
 
 QT_BEGIN_NAMESPACE
@@ -54,18 +50,21 @@ QT_BEGIN_NAMESPACE
 QT_MODULE(ActiveQt)
 
 #ifndef QT_NO_WIN_ACTIVEQT
+class Ui_QAxSelect;
 
-class QAxSelect : public QDialog, private Ui::QAxSelect
+class QAxSelect : public QDialog
 {
     Q_OBJECT
 public:
     QAxSelect(QWidget *parent = 0, Qt::WindowFlags f = 0);
-
-    QString clsid() const { return ActiveX->text(); }
+    ~QAxSelect();
+    QString clsid() const;
 
 private Q_SLOTS:
     void on_ActiveXList_clicked(const QModelIndex &index);
     void on_ActiveXList_doubleClicked(const QModelIndex &index);
+private:
+    Ui_QAxSelect *selectUi;
 };
 
 QT_END_NAMESPACE
